# wine_variety_classification

./: .env.example  .gitignore  CLAUDE.md  LICENSE  LORA.md  QWEN.md  README.md  config.py  credit_data_utils.py  data_utils.py  final_plot.py  program.md  pyproject.toml  requirements.txt  wine_all.py  wine_ollama.ipynb
providers/: __init__.py  anthropic.py  credit_mlx_batch.py  deepseek.py  gemini.py  gemini_genai.py  gemini_openai.py  lmstudio.py  mlx_batch.py  mlx_omni_server.py  mlx_server_unstructured.py  ollama.py  openai.py  openai_batching.py  openai_unstructured.py  openrouter.py  wine_anthropic.py  wine_deepseek.py  wine_gemini.py  wine_gemini_genai.py  wine_gemini_openai.py  wine_groq.py  wine_lmstudio.py  wine_mlx_batch.py  wine_mlx_omni_server.py  wine_mlx_server_unstructured.py  wine_ollama.py  wine_openai.py  wine_openai_batching.py  wine_openai_unstructured.py  wine_openrouter.py
results/: summary_20250105_095642.csv  summary_20250105_115642.csv  summary_20250501_150000.csv  summary_20250501_171342.csv  summary_20250501_190003.csv
tests/: test_openrouter.py
train/: gemma_lora_config.base_text.yaml  gemma_lora_config.yaml  generate_credit_data.py  generate_data.py  llama3_3_lora_config.yaml  lora_training_monitor.py  mistral_lora_config_sample.yaml  phi_4_lora_config.yaml  phi_lora_config.yaml  phi_lora_config_sample.yaml  qwen_credit_lora_config.yaml  qwen_lora_config.yaml  smol3_lora_config.yaml
